[gd_scene load_steps=5 format=2]

[ext_resource path="res://baddies/common_grunt_controller.gd" type="Script" id=1]
[ext_resource path="res://baddies/player_detection.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 500.0

[sub_resource type="CircleShape2D" id=3]
radius = 108.812

[node name="controller" type="Node2D"]
process_priority = -1
script = ExtResource( 1 )

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource( 2 )

[node name="shoot_cooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="noise_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="noise_detection"]
shape = SubResource( 3 )

[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="area_entered" from="noise_detection" to="." method="_on_noise_detection_area_entered"]
